--- a/spec/cassettes/Vindetta_Generator/_generate/with_no_options/1_1_1_1.yml
+++ b/spec/cassettes/Vindetta_Generator/_generate/with_no_options/1_1_1_1.yml
@@ -19,7 +19,7 @@ http_interactions:
       message: OK
     headers:
       Date:
-      - Mon, 13 Nov 2017 22:41:30 GMT
+      - Wed, 27 Dec 2017 14:09:04 GMT
       Server:
       - Apache
       Transfer-Encoding:
@@ -28,7 +28,7 @@ http_interactions:
       - text/html; charset=UTF-8
     body:
       encoding: UTF-8
-      string: 4A31K3DT2BE665277
+      string: 1G4HP54K434280635
     http_version: 
-  recorded_at: Mon, 13 Nov 2017 22:41:31 GMT
-recorded_with: VCR 3.0.3
+  recorded_at: Wed, 27 Dec 2017 14:09:04 GMT
+recorded_with: VCR 4.0.0
